--- a/index.css
+++ b/index.css
@@ -76,7 +76,7 @@ input::-webkit-inner-spin-button {
   display: block;
 }
 
-.card_input--invalid.card_input--can-validate {
+.card_input--can-validate.card_input--invalid {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.25), 0 0 0 1px red;
 }
 
