--- a/index.css
+++ b/index.css
@@ -1,10 +1,191 @@
-* {
+*,
+*::before,
+*::after {
+  border-width: 0;
+  border-style: solid;
   box-sizing: border-box;
+}
+
+html {
+  line-height: 1.4;
+  height: 100%;
+  -webkit-text-size-adjust: 100%;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+  -moz-osx-font-smoothing: grayscale;
+  touch-action: manipulation;
 }
 
 body, p {
   margin: 0;
   padding: 0;
+}
+
+body {
+  min-height: 100%;
+  width: 100%;
+  display: flex;
+  position: relative;
+  font-feature-settings: 'kern';
+  background: #F7F8FC;
+}
+
+.layout-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  flex-direction: column;
+  position: relative;
+  width: 100%;
+  padding: 0 15px 15px;
+}
+
+.layout-head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+  position: relative;
+  max-width: 1400px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.layout-bg {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+}
+
+@media (max-width: 500px) {
+  .layout-bg {
+    display: none;
+  }
+}
+
+.layout-logo {
+  display: block;
+  height: auto;
+  transform: translateY(-15%);
+}
+
+.layout-content {
+  flex: 1;
+  align-self: stretch;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.paper-root {
+  max-width: 750px;
+  width: 100%;
+}
+
+@media (min-width: 500px) {
+  .paper-root {
+    padding: 40px 15px 30px;
+    position: relative;
+    z-index: 0;
+    border: 1px solid #EAEFF4;
+    border-radius: 8px;
+    color: #14121F;
+    transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+    background-color: #fff;
+  }
+}
+
+.paper-root__bg-elem {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 140px;
+  background: rgba(234, 239, 244, 0.2);
+  z-index: -1;
+}
+
+@media (max-width: 500px) {
+  .paper-root__bg-elem {
+    display: none;
+  }
+}
+
+.link-cancel {
+  appearance: none;
+  border: none;
+  background: none;
+  color: inherit;
+  outline: none;
+  text-decoration: underline;
+  cursor: pointer;
+  font-weight: 500;
+  font-size: 12px;
+  font-family: Inter, sans-serif;
+  display: inline-block;
+  margin-top: 30px;
+}
+
+.paper-title {
+  font-size: 24px;
+  text-align: center;
+  font-weight: 400;
+  margin: 0 0 1.25em;
+  font-family: Inter, sans-serif;
+}
+
+.span-success {
+  color: #20BFA9;
+  font-weight: 600;
+}
+
+.card_form {
+  background: #FFFFFF;
+  border: 1px solid #DFE0EB;
+  box-sizing: border-box;
+  box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  max-width: 480px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 40px 25px;
+  text-align: center;
+  font-family: "Inter", Inter, sans-serif;
+}
+
+@media (max-width: 500px) {
+  .card_form {
+    padding: 20px 15px;
+  }
+}
+
+.card_button {
+  background: #FEB95A;
+  border-radius: 4px;
+  border: none;
+  min-width: 160px;
+  font-weight: 500;
+  font-size: 14px;
+  color: #14121F;
+  padding: 9px 0;
+  font-family: inherit;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  line-height: 1.2;
+  min-height: 38px;
+  margin: 30px auto 0;
+  cursor: pointer;
+  transition: background-color 150ms, box-shadow 150ms;
+}
+
+.card_button:hover {
+  text-decoration: none;
+  background-color: rgb(177, 129, 62);
+  box-shadow: 0 2px 4px -1px rgb(0 0 0 / 20%), 0 4px 5px 0 rgb(0 0 0 / 14%), 0 1px 10px 0 rgb(0 0 0 / 12%);
 }
 
 .card_wrapper {
@@ -30,7 +211,6 @@ body, p {
   flex-direction: column;
   justify-content: space-between;
 }
-
 
 .card_right {
   min-width: 0;
@@ -154,9 +334,5 @@ input::-webkit-inner-spin-button {
 
   .expiry_date input {
     width: 30px;
-  }
-
-  .card_wrapper {
-    border-radius: 10px;
   }
 }
