webkit fixing styles

--- a/index.css
+++ b/index.css
@@ -248,6 +248,7 @@ input::-webkit-inner-spin-button {
   background: rgba(255, 255, 255, 0.4);
   border: none;
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.25);
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.25);
   border-radius: 4px;
   height: 38px;
   width: 100%;
@@ -260,6 +261,7 @@ input::-webkit-inner-spin-button {
 
 .card_input--can-validate.card_input--invalid {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.25), 0 0 0 1px red;
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.25), 0 0 0 1px red;
 }
 
 .card_input::placeholder {
